src/components/Tooltip/styles.scss
.gcharts-tooltip {
    padding: var(--gcharts-tooltip-content-padding, 8px 0);

    box-shadow: 0 2px 12px var(--g-color-sfx-shadow);

    &__popup-content {
        max-width: 450px;

        text-wrap: nowrap;

        border-radius: 4px;
        background-color: var(--g-color-infographics-tooltip-bg);
    }

    &__content {
        display: flex;
        overflow: hidden;
        flex-direction: column;

        max-height: 90vh;
    }

    &__content-rows {
        overflow: hidden;

        &_pinned {
            overflow: auto;
        }
    }

    &__series-name {
        padding: 2px 14px 6px;

        font-size: 13px;
        font-weight: 600;
    }

    &__series-name-text {
        display: block;
        overflow: hidden;

        white-space: nowrap;
        text-overflow: ellipsis;
    }

    &__content-row {
        display: flex;
        align-items: center;
        column-gap: 8px;

        padding: 2px 14px;

        font-size: 12px;

        &_striped {
            background-color: var(--g-color-base-generic);
        }

        &_active {
            font-weight: 600;

            background-color: var(--g-color-base-info-medium);
        }
    }

    &__content-row-color {
        display: inline-block;

        width: 16px;
        height: 8px;

        border-radius: 2px;
        background-color: #dddddd;
    }

    &__content-row-value {
        margin-inline-start: auto;
    }

    &__content-row-totals {
        color: var(--g-color-text-complementary);
    }

    &__content-row-totals-divider {
        margin-block: 5px 5px;
    }
}

